2004-02-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (join-rm): New test for issue #104 & #159.

2004-02-02  Derek Price  <derek@ximbiot.com>

	* update.c (join_file): Correct status message for consistency.

2004-02-02  Derek Price  <derek@ximbiot.com>

	Continue removal from server of handling of case insensitive clients.

	* cvs.h: Remove extern declaration of ign_case.
	* ignore.c (ign_case): Remove declaration.
	(ign_name): Remove support for ign_case.
	* server.c (serve_case): Ditto.
	(requests): No longer support the "Case" request.
	* rcs.c (locate_rcs): Remove reference to GLOBAL in function header
	comment.

2004-02-02  Derek Price  <derek@ximbiot.com>

	* client.c (send_file_names): Restore prescribed client handling of the
	FILENAMES_CASE_INSENSITIVE switch.

2004-01-25  Derek Price  <derek@ximbiot.com>

	* server.c (kserver_authenticate_connection): Fix call to
	switch_to_user().
	(Original patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

2004-01-22  Derek Price  <derek@ximbiot.com>

	* modules.c (do_module): Strip trailing slashes before checking for
	infinite alias loops.
	* sanity.sh (modules): Tests for response to infinite alias loops.

2004-01-17  Mark D. Baushke  <mdb@cvshome.org>

	* logmsg.c (do_verify): Eliminate double-free bug.
	(Original patch from Gerald Combs.)

2004-01-12  Mark D. Baushke  <mdb@cvshome.org>

	* lock.c (lock_name): Deal with potentially NULL string pointers
	in calls to TRACE.
	(promotable_lock): Ditto.
	(set_lock): Ditto.
	* sanity.sh (trace): Update to latest patterns.

2004-01-07  Larry Jones  <lawrence.jones@ugsplm.com>

	* checkout.c (safe_location): Remove unused variable(s).
	* lock.c (lock_tree_for_write): Ditto.
	* rcs.c (RCS_checkin): Ditto.
	* subr.c (compare_revnums): Ditto.
	* tag.c (tag_check_valid): Ditto.
	* mkmodules.c (init): Initialize err and return it rather than 0.
	* server.c (do_cvs_command): Only define and set max_command_fd if
	we're actually going to use it.
